refactor: Fix list creation in tests